docs/_src/docs.scss
/**
 * edit:
 *   - docs/_src/docs.scss
 *
 * do not edit:
 *   - docs/assets/docs.css
 *
 * how to compile:
 *   `make sass-docs`
 */
@import "themes/code-manual/_main.scss";

footer .contact-address {
    order: 99;
    flex-basis: 100%;
    padding-top: 0px !important;
}

footer .contact-regdetails {
    order: 2;
    flex-basis: 100%;
    flex-grow: 1;
}

p.leader-bolder {
    @include component-p-bolder();
}

p.leader-caps {
    @include component-p-caps();
}

p.leader-bolder-caps {
    @include component-p-bolder();
    @include component-p-caps();
}

@media #{$media-group-d} {
    footer .contact-address {
        flex-basis: 20%;
        flex-grow: 1;
    }

    footer .contact-regdetails {
        flex-basis: 20%;
        flex-grow: 1;
    }
}

